# noisy-channel-correction

./: .gitignore  Makefile  Procfile  README.md  __init__.py  eval_results.json  evaluation_results.json  plan.md  pyproject.toml  requirements.txt  setup.py  test_all_modules.py
.do/: app.yaml
config/: candidate_generator_settings.json
data/: english_conversations.json  noisy_pairs.json  noisy_pairs_case_preserved.json  noisy_pairs_config.json  noisy_pairs_final.json  noisy_pairs_fr_eyegaze.json  test_confusion_matrix.json  test_corrected.txt  test_eval_results.json  test_noisy_pairs.json  word_frequencies_en_gb.txt
data/conversational_corpora/: combined_conversational.txt  common_phrases.txt  twitter.txt
data/evaluation_results/: english_evaluation_results.json  (+2 more)
lib/: config.py
models/: confusion_matrix_en_gb.json  keyboard_confusion_matrices.json  keyboard_confusion_matrices_en_gb.json  ppm_model_en_gb.pkl  qwerty_confusion_matrix_en_gb.json  sample_en_gb_training_text.txt  training_text_en_gb.txt  word_ngram_model_en_gb.pkl
module1/: README.md  keyboard_error_model.py  language_keyboards.py  noise_model.py  scanning_library.py  simulate.py  test_keyboard_errors.py
module2/: build_matrix.py  confusion_matrix.py  test_confusion_matrix.py
module3/: README.md  candidate_generator.py  generate_candidates.py  test_candidate_generator.py
module4/: __init__.py  correct.py  corrector.py  example.py  test_corrector.py
module5/: __init__.py  demo.py  eval.py  eval_results.json  module1_utils.py  requirements.txt  utils.py
scripts/: README.md  __init__.py
(+116 files in other folders)
